Fix White Space In Mobile

--- a/style.css
+++ b/style.css
@@ -764,6 +764,7 @@ footer{
 
 
     .menu-none{
+        padding: 0px 10px;
         display: block;
     }
 
